--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -75,8 +76,10 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "autoprefixer": "^10.4.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
@@ -84,9 +87,12 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
+    "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0"
   }
 }
