--- a/package.json
+++ b/package.json
@@ -91,10 +91,14 @@
     "husky": "^8.0.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
+    "msw": "^0.49.1",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
